This should fix the Ctrl+w bug. Anyway, it really doesn't solve it: there is a corner case where the trick implemented doesn't work. We'll see if someone can fix also that..

BUG:233937